--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -36,3 +36,13 @@ footer  {
 .portext {
     color: dimgrey ;
 }
+
+
+
+/* @media only screen and (min-width : 320px) {  
+	
+	.card-img {
+		margin-left: 8%
+	}
+	
+}   */
