--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -37,12 +37,75 @@ footer  {
     color: dimgrey ;
 }
 
+/* .paratext {
+margin-left: 40%  */
+
+/* } */
 
 
+/* // Custom, iPhone 4 & 5 */
 /* @media only screen and (min-width : 320px) {  
 	
-	.card-img {
-		margin-left: 8%
-	}
+	.container{
+		margin-left: 0%
+    }
+    
 	
 }   */
+
+/* Custom, iPhone 6 & 7 *  */
+ /* @media only screen and (min-width : 400px) { 
+
+	.container {
+        margin-left: 0%
+    }
+    
+	
+ } */
+
+ /* // Extra Small Devices, Phones  */
+/* @media only screen and (min-width : 576px) { 
+
+	.container {
+		margin-left: 0%
+    }
+    
+
+
+}  */
+
+
+/* @media only screen and (min-width : 540px) { 
+
+	.row-sm- {
+		margin-left: 17%
+	}
+
+}  */ */
+
+
+/* // Small Devices, Tablets */
+/* @media only screen and (min-width : 768px) { 
+
+	.row-sm- {
+		margin-left: 27%
+	}
+} 
+ */
+
+
+/* // Medium Devices, Desktops */
+/* @media only screen and (min-width : 992px) { 
+
+	.row-sm-{
+		margin-left: 32%
+	}
+}  */
+
+/* // Large Devices, Wide Screens */
+/* @media only screen and (min-width : 1200px) { 
+
+	.row-sm- {
+		margin-left: 34%
+	}
+}  */
