--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -37,75 +37,52 @@ footer  {
     color: dimgrey ;
 }
 
-/* .paratext {
-margin-left: 40%  */
-
-/* } */
 
 
-/* // Custom, iPhone 4 & 5 */
-/* @media only screen and (min-width : 320px) {  
-	
-	.container{
-		margin-left: 0%
-    }
-    
-	
-}   */
 
 /* Custom, iPhone 6 & 7 *  */
- /* @media only screen and (min-width : 400px) { 
+ @media only screen and (min-width : 400px) { 
 
 	.container {
         margin-left: 0%
     }
     
 	
- } */
+ }
 
- /* // Extra Small Devices, Phones  */
-/* @media only screen and (min-width : 576px) { 
+ /* Custom, iPhone 6 & 7 *  */
+@media only screen and (min-width : 625px) { 
 
 	.container {
-		margin-left: 0%
+		margin-left: 10%
     }
     
+}  
 
+/* Custom, iPhone 6 & 7 *  */
+@media only screen and (min-width : 770px) { 
 
-}  */
+	.container {
+		margin-left: 20%
+    }
+    
+}  
 
+/* Custom, iPhone 6 & 7 *  */
+@media only screen and (min-width : 950px) { 
 
-/* @media only screen and (min-width : 540px) { 
+	.container {
+		margin-left: 25%
+    }
+    
+}  
 
-	.row-sm- {
-		margin-left: 17%
-	}
+/* Custom, iPhone 6 & 7 *  */
+@media only screen and (min-width : 1200px) { 
 
-}  */ */
-
-
-/* // Small Devices, Tablets */
-/* @media only screen and (min-width : 768px) { 
-
-	.row-sm- {
-		margin-left: 27%
-	}
-} 
- */
-
-
-/* // Medium Devices, Desktops */
-/* @media only screen and (min-width : 992px) { 
-
-	.row-sm-{
+	.container {
 		margin-left: 32%
-	}
-}  */
+    }
+    
+}  
 
-/* // Large Devices, Wide Screens */
-/* @media only screen and (min-width : 1200px) { 
-
-	.row-sm- {
-		margin-left: 34%
-	}
-}  */
