new portfolio file

--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -45,8 +45,11 @@ footer  {
 	.container {
         margin-left: 0%
     }
+    .portcontainer {
+        margin-left: 10%
+    }
     
-	
+    
  }
 
  /* Custom, iPhone 6 & 7 *  */
