--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -59,6 +59,9 @@ footer  {
 	.container {
 		margin-left: 10%
     }
+    .portcontainer {
+        margin-left: 25%
+    }
     
 }  
 
@@ -67,6 +70,9 @@ footer  {
 
 	.container {
 		margin-left: 20%
+    }
+    .portcontainer {
+        margin-left: 33%
     }
     
 }  
@@ -77,6 +83,9 @@ footer  {
 	.container {
 		margin-left: 25%
     }
+    .portcontainer {
+        margin-left: 36%
+    }
     
 }  
 
@@ -85,6 +94,9 @@ footer  {
 
 	.container {
 		margin-left: 32%
+    }
+    .portcontainer {
+        margin-left: 38%
     }
     
 }  
