new resume style

--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -38,6 +38,10 @@ footer  {
     font-size: 10px
 }
 
+.LI-profile-badge {
+    margin-left: 7%;
+    margin-top:5%;
+}
 
 
 /* Custom, iPhone 6 & 7 *  */
@@ -53,9 +57,17 @@ footer  {
         margin-left:5%
     }
     .rescontainer{
-        margin-left:0%;
-        margin-bottom:9%;
+        margin-left:12%;
+        margin-bottom:5%;
     }
+    .resume{
+        width: 375px;
+    }
+    .LI-profile-badge{
+        margin-left:7%;
+    }
+
+
     
  }
 
@@ -72,8 +84,14 @@ footer  {
         margin-left:18%
     }
     .rescontainer{
-        margin-left:15%;
+        margin-left:10%;
         margin-bottom:5%;
+    }
+    .resume{
+        width: 550px;
+    }
+    .LI-profile-badge{
+        margin-left:15%;
     }
 
 
@@ -92,8 +110,14 @@ footer  {
         margin-left:23%
     }
     .rescontainer{
-        margin-left:25%;
+        margin-left:10%;
         margin-bottom:5%;
+    }
+    .resume{
+        width: 620px;
+    }
+    .LI-profile-badge{
+        margin-left:20%;
     }
 }  
 
@@ -110,8 +134,14 @@ footer  {
         margin-left:28%
     }
     .rescontainer{
-        margin-left:32%;
+        margin-left:10%;
         margin-bottom:5%;
+    }
+    .resume{
+        width: 800px;
+    }
+    .LI-profile-badge{
+        margin-left:30%;
     }
 }  
 
@@ -128,8 +158,14 @@ footer  {
         margin-left:33%
     }
     .rescontainer{
-        margin-left:35%;
-        margin-bottom:5%;
+        margin-left:20%;
+        margin-bottom:5%;   
+    }
+    .resume{
+        width: 1000px;
+    }
+    .LI-profile-badge{
+        margin-left:30%;
     }
 }  
 
@@ -137,7 +173,7 @@ footer  {
 @media only screen and (min-width : 1680px) { 
 
 	.container {
-		margin-left: 40%
+		margin-left: 40%w
     }
     .portcontainer {
         margin-left: 38%
@@ -146,8 +182,14 @@ footer  {
         margin-left:38%
     }
     .rescontainer{
-        margin-left:42%;
-        margin-bottom:5%;
+        margin-left:15%;
+        margin-bottom:20%;
+    }
+    .resume{
+        width: 1400px;
+    }
+    .LI-profile-badge{
+        margin-left:45%;
     }
         
 }  
