--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -38,17 +38,18 @@ footer  {
     font-size: 10px
 }
 
-.LI-profile-badge {
+/* .LI-profile-badge {
     margin-left: 7%;
     margin-top:5%;
-}
+} */
 
 
 /* Custom, iPhone 6 & 7 *  */
  @media only screen and (min-width : 375px) { 
 
-	.container {
-        margin-left: 0%
+	.aboutcontainer {
+        margin-left: 2%;
+        margin-bottom:10%;
     }
     .portcontainer {
         margin-left: 1%
@@ -60,13 +61,16 @@ footer  {
         margin-left:12%;
         margin-bottom:5%;
     }
-    .resume{
+    .width{
         width: 375px;
     }
     .LI-profile-badge{
         margin-left:7%;
     }
 
+    .aboutlabel{
+        margin-left:10%;  
+    }
 
     
  }
@@ -74,8 +78,9 @@ footer  {
  /* Custom, iPhone 6 & 7 *  */
 @media only screen and (min-width : 625px) { 
 
-	.container {
-		margin-left: 10%
+	.aboutcontainer {
+        margin-left: 2%;
+        margin-bottom:10%;
     }
     .portcontainer {
         margin-left: 25%
@@ -87,11 +92,14 @@ footer  {
         margin-left:10%;
         margin-bottom:5%;
     }
-    .resume{
+    .width{
         width: 550px;
     }
     .LI-profile-badge{
         margin-left:15%;
+    }
+    .aboutlabel{
+        margin-left:30%;  
     }
 
 
@@ -100,8 +108,9 @@ footer  {
 /* Custom, iPhone 6 & 7 *  */
 @media only screen and (min-width : 770px) { 
 
-	.container {
-		margin-left: 20%
+	.aboutcontainer {
+        margin-left: 3%;
+        margin-bottom:10%;
     }
     .portcontainer {
         margin-left: 33%
@@ -113,19 +122,23 @@ footer  {
         margin-left:10%;
         margin-bottom:5%;
     }
-    .resume{
+    .width{
         width: 620px;
     }
     .LI-profile-badge{
         margin-left:20%;
+    }
+    .aboutlabel{
+        margin-left:22%;  
     }
 }  
 
 /* Custom, iPhone 6 & 7 *  */
 @media only screen and (min-width : 950px) { 
 
-	.container {
-		margin-left: 25%
+	.aboutcontainer {
+        margin-left: 3%;
+        margin-bottom:10%;
     }
     .portcontainer {
         margin-left: 36%
@@ -137,19 +150,23 @@ footer  {
         margin-left:10%;
         margin-bottom:5%;
     }
-    .resume{
+    .width{
         width: 800px;
     }
     .LI-profile-badge{
         margin-left:30%;
+    }
+    .aboutlabel{
+        margin-left:18%;  
     }
 }  
 
 /* Custom, iPhone 6 & 7 *  */
 @media only screen and (min-width : 1200px) { 
 
-	.container {
-		margin-left: 32%
+	.aboutcontainer {
+        margin-left: 3%;
+        margin-bottom:10%;
     }
     .portcontainer {
         margin-left: 38%
@@ -161,19 +178,23 @@ footer  {
         margin-left:20%;
         margin-bottom:5%;   
     }
-    .resume{
+    .width{
         width: 1000px;
     }
     .LI-profile-badge{
         margin-left:30%;
+    }
+    .aboutlabel{
+        margin-left:15%;  
     }
 }  
 
 /* Custom, iPhone 6 & 7 *  */
 @media only screen and (min-width : 1680px) { 
 
-	.container {
-		margin-left: 40%w
+	.aboutcontainer {
+        margin-left: 2%;
+        margin-bottom:10%;
     }
     .portcontainer {
         margin-left: 38%
@@ -185,11 +206,14 @@ footer  {
         margin-left:15%;
         margin-bottom:20%;
     }
-    .resume{
+    .width{
         width: 1400px;
     }
     .LI-profile-badge{
         margin-left:35%;
+    }
+    .bio{
+        margin-left:50%;
     }
         
 }  
