--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -55,7 +55,8 @@ footer  {
         margin-left: 1%
     }
     .cardcontainer{
-        margin-left:3%
+        margin-left:3%;
+        margin-bottom:10%;
     }
     .rescontainer{
         margin-left:12%;
@@ -69,7 +70,8 @@ footer  {
     }
 
     .aboutlabel{
-        margin-left:10%;  
+        margin-left:10%; 
+         
     }
 
     
@@ -86,7 +88,8 @@ footer  {
         margin-left: 25%
     }
     .cardcontainer {
-        margin-left:18%
+        margin-left:18%;
+        margin-bottom:10%;
     }
     .rescontainer{
         margin-left:10%;
@@ -116,7 +119,8 @@ footer  {
         margin-left: 33%
     }
     .cardcontainer {
-        margin-left:23%
+        margin-left:23%;
+        margin-bottom:10%;
     }
     .rescontainer{
         margin-left:10%;
@@ -144,7 +148,8 @@ footer  {
         margin-left: 36%
     }
     .cardcontainer {
-        margin-left:28%
+        margin-left:28%;
+        margin-bottom:10%;
     }
     .rescontainer{
         margin-left:10%;
@@ -172,7 +177,8 @@ footer  {
         margin-left: 38%
     }
     .cardcontainer {
-        margin-left:33%
+        margin-left:33%;
+        margin-bottom:10%;
     }
     .rescontainer{
         margin-left:20%;
@@ -200,7 +206,8 @@ footer  {
         margin-left: 38%
     }
     .cardcontainer {
-        margin-left:38%
+        margin-left:38%;
+        margin-bottom:10%;
     }
     .rescontainer{
         margin-left:15%;
