--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -81,8 +81,10 @@ footer  {
 @media only screen and (min-width : 625px) { 
 
 	.aboutcontainer {
-        margin-left: 2%;
+        margin-left: 10%;
         margin-bottom:10%;
+        margin-top:5%; 
+        width: 500px;
     }
     .portcontainer {
         margin-left: 25%
@@ -112,8 +114,10 @@ footer  {
 @media only screen and (min-width : 770px) { 
 
 	.aboutcontainer {
-        margin-left: 3%;
+        margin-left: 10%;
         margin-bottom:10%;
+        margin-top:5%; 
+        width: 600px;
     }
     .portcontainer {
         margin-left: 33%
@@ -141,8 +145,10 @@ footer  {
 @media only screen and (min-width : 950px) { 
 
 	.aboutcontainer {
-        margin-left: 3%;
+        margin-left: 6%;
         margin-bottom:10%;
+        margin-top:5%; 
+        width: 800px;
     }
     .portcontainer {
         margin-left: 36%
@@ -172,6 +178,8 @@ footer  {
 	.aboutcontainer {
         margin-left: 3%;
         margin-bottom:10%;
+        margin-top:5%; 
+        width: 1000px;
     }
     .portcontainer {
         margin-left: 38%
@@ -199,8 +207,10 @@ footer  {
 @media only screen and (min-width : 1680px) { 
 
 	.aboutcontainer {
-        margin-left: 2%;
+        margin-left: 5%;
         margin-bottom:10%;
+        margin-top:5%; 
+        width: 1555px;
     }
     .portcontainer {
         margin-left: 38%
