--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -3,6 +3,21 @@ body    {
 
 }
 
+.img-thumbnail{        
+    /* width: 300px;  */
+    /* or you could use percentage values for responsive layout */
+    width : 100%;
+    height: 65%;
+    overflow: auto;
+}
+
+/* .img-thumbnail{
+    your styles for the image
+    width: 100%;
+    height: auto;
+    display: block;
+} */
+
 
 main header  {
     display: block;
@@ -98,6 +113,8 @@ footer  {
     }
 
     
+
+    
  }
 
  /* Custom, iPhone 6 & 7 *  */
@@ -174,7 +191,7 @@ footer  {
         width: 800px;
     }
     .portcontainer {
-        margin-left: 36%
+        margin-left: 25%
     }
     .cardcontainer {
         margin-left:28%;
@@ -205,7 +222,7 @@ footer  {
         width: 800px;
     }
     .portcontainer {
-        margin-left: 38%
+        margin-left: 30%
     }
     .cardcontainer {
         margin-left:33%;
@@ -236,7 +253,7 @@ footer  {
         width: 800px;
     }
     .portcontainer {
-        margin-left: 38%
+        margin-left: 30%
     }
     .cardcontainer {
         margin-left:38%;
