changes to the navigation look and feel

--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -275,5 +275,11 @@ footer  {
     .aboutlabel{
         margin-left:100%;  
     }
+
+    /* .text-justified whitetext{
+        margin-left:500px;
+    } */
+
+
         
 }  
