--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -90,7 +90,44 @@ footer  {
         margin-bottom:10%;
     }
     .portcontainer {
-        margin-left: 1%
+        margin-left: 1%;
+        width: 375px;
+    }
+    .cardcontainer{
+        margin-left:3%;
+        margin-bottom:10%;
+    }
+    .rescontainer{
+        margin-left:12%;
+        margin-bottom:5%;
+    }
+    .width{
+        width: 375px;
+    }
+    .LI-profile-badge{
+        margin-left:7%;
+    }
+
+    .aboutlabel{
+        margin-left:10%; 
+         
+    }
+
+    
+
+    
+ }
+
+ /* Custom, iPhone 6 & 7 *  */
+ @media only screen and (min-width : 414px) { 
+
+	.aboutcontainer {
+        margin-left: 2%;
+        margin-bottom:10%;
+    }
+    .portcontainer {
+        margin-left: 1%;
+        width: 414px;
     }
     .cardcontainer{
         margin-left:3%;
@@ -127,7 +164,8 @@ footer  {
         width: 500px;
     }
     .portcontainer {
-        margin-left: 25%
+        margin-left: 0%;
+        width: 375px;
     }
     .cardcontainer {
         margin-left:18%;
@@ -247,9 +285,9 @@ footer  {
 @media only screen and (min-width : 1680px) { 
 
 	.aboutcontainer {
-        margin-left: 25%;
-        margin-bottom:10%;
-        margin-top:10%; 
+        margin-left: 27%;
+        margin-bottom:30%;
+        /* margin-top:10%;  */
         width: 800px;
     }
     .portcontainer {
