--- a/templates/emailtest.html
+++ b/templates/emailtest.html
@@ -10,6 +10,8 @@
         <!--<![endif]-->
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
         <style type="text/css">
           #outlook a { padding:0; }
           .ReadMsgBody { width:100%; }
@@ -43,10 +45,13 @@
         <![endif]-->
         
       <!--[if !mso]><!-->
-        <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet" type="text/css">
+        <!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet" type="text/css"> -->
         <style type="text/css">
           @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
         </style>
+                <link rel="stylesheet" href="../assets/css/portfoliostyle.css">
+
+
       <!--<![endif]-->
 
     
@@ -70,11 +75,42 @@
       </head>
       
       <body style="background-color:#ffffff;">
+
+        <nav class= "nav navbar-expand-sm navbar-light" style="background-color:white">          
+          <h1>
+                  <div class="logocontainer">
+                    <div class="row-sm">
+                        <div class="col-sm">
+                          <span class="border-5">
+                                <img src="../assets/images/cropped-headbanner.jpg" alt="logo"></div></span> 
+                  
+                  </div>
+              </h1>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="ml-auto nav">
+      <li class="nav-item">
+        <a class="nav-link active whitetext" href="../index.html">About</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link whitetext" href="../portfolio.html">Portfolio</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link whitetext" href="../contact.html">Contact</a>
+      </li>
+      <li class="nav-item">
+              <a class="nav-link whitetext" href="../resume.html">Resume</a>
+          </li>
+    </ul>
+  </div>
+    </nav>
         
         
-      <div
-         style="background-color:#ffffff;"
-      >
+     
+      
         
       
       <!--[if mso | IE]>
@@ -628,6 +664,8 @@
     
     
       </div>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+
     
       </body>
     </html>
