--- a/templates/emailtest.html
+++ b/templates/emailtest.html
@@ -46,9 +46,9 @@
         
       <!--[if !mso]><!-->
         <!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700" rel="stylesheet" type="text/css"> -->
-        <style type="text/css">
+        <!-- <style type="text/css">
           @import url(https://fonts.googleapis.com/css?family=Ubuntu:300,400,500,700);
-        </style>
+        </style> -->
                 <link rel="stylesheet" href="../assets/css/portfoliostyle.css">
 
 
